added Jwt token creation and auth req for endpoints.

--- a/NoiseEventApi/NoiseEventApi/appsettings.json
+++ b/NoiseEventApi/NoiseEventApi/appsettings.json
@@ -5,5 +5,33 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://localhost:5341" }
+      }
+    ]
+  },
+  "JwtSettings": {
+    "Issuer": "NoiseEventApi",
+    "Audience": "MauiApp",
+    "DurationInMinutes": 1,
+    "Key": "YourSecretEncodingKey"
+  },
   "AllowedHosts": "*"
 }
